--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,10 @@
 {
 	"name": "Ubuntu",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:jammy",
+	// "image": "mcr.microsoft.com/devcontainers/base:jammy",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -15,7 +18,10 @@
 		"vscode": {
 			"extensions": [
 				"nvarner.typst-lsp",
-				"mgt19937.typst-preview"
+				"mgt19937.typst-preview",
+				"ms-python.python",
+				"ms-toolsai.jupyter",
+				"toasty-technologies.octave"
 			]
 		}
 	},
